# alegria

./: .env.example  .gitignore  Cargo.toml  README.md  i18n.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
core/: Cargo.toml
core/migrations/: 0002_seeding.sql  0003_indexes.sql
core/src/: database.rs  lib.rs  print.rs
core/src/models/: client.rs  product_category.rs  reservation.rs  room_type.rs  simple_invoice.rs  temporal_product.rs
i18n/en/: iced_alegria.ftl
i18n/es/: alegria.ftl  iced_alegria.ftl
migrations/: 0001_init.sql  0002_seeding.sql
resources/: dev.mariinkys.Alegria.desktop  dev.mariinkys.Alegria.metainfo.xml
src/: app.rs  main.rs
src/alegria/: action.rs  mod.rs  screen.rs  utils.rs
src/alegria/core/: database.rs  mod.rs  print.rs
src/alegria/core/models/: client.rs  gender.rs  identity_document_type.rs  mod.rs  payment_method.rs  product.rs  product_category.rs  reservation.rs  room.rs  room_type.rs  simple_invoice.rs  sold_product.rs  sold_room.rs  temporal_product.rs  temporal_ticket.rs
src/alegria/screen/: bar.rs  hotel.rs  management.rs
src/alegria/screen/bar/: mod.rs  update.rs  view.rs
src/alegria/screen/hotel/: clients.rs  reservations.rs  room_types.rs  rooms.rs
src/alegria/screen/hotel/reservations/: add.rs  edit.rs
src/alegria/screen/management/: product_categories.rs  products.rs  simple_invoices.rs
src/alegria/screens/: bar.rs  hotel.rs  mod.rs
src/alegria/screens/bar/: mod.rs  update.rs  view.rs
src/alegria/screens/hotel/: clients.rs  mod.rs  reservations.rs  room_types.rs  rooms.rs
src/alegria/screens/hotel/reservations/: add.rs  mod.rs
src/alegria/screens/hotel_subscreens/: clients.rs  mod.rs  reservations.rs  room_types.rs  rooms.rs
src/alegria/utils/: entities.rs  pagination.rs  styling.rs  temporal_tickets.rs
src/alegria/utils/entities/: gender.rs  identity_document_type.rs  payment_method.rs
src/alegria/widgets/: focusable_text_input.rs  mod.rs  modal.rs  numpad.rs  toast.rs
src/alegria/widgets/focusable_text_input/: cursor.rs  value.rs
utils/: Cargo.toml
utils/src/: date.rs  entities.rs  lib.rs  styling.rs
utils/src/entities/: gender.rs  identity_document_type.rs  payment_method.rs
