[package]
name = "iced-alegria"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", default-features = false, features = [
    "tokio",
    "wgpu",
    "tiny-skia",
    "advanced",
    "image",
    "debug",
] }
anywho = "0.1.2"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
i18n-embed-fl = "0.9.4" # needed for fl support
rust-embed = "8.7.2" # needed for fl support
dotenvy = "0.15.7" # .env support
printers = "2.1.3" # getting printers, sending docs to print...
tokio = "1.45.1"
printpdf = "0.8.2" # pdf generation
fontdue = "0.9.3" # needed to measure the text width in order to print

[dependencies.i18n-embed]
version = "0.15.4"
features = ["fluent-system", "desktop-requester"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependenc.
# Slows compile times, marginal improvements.
lto = "thin"
