[package]
name = "alegria"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["core", "utils"]

[workspace.dependencies]
alegria_core.path = "./core"
alegria_utils.path = "./utils"

iced = { git = "https://github.com/iced-rs/iced" }
anywho = "0.1.2"
sqlx = "0.8.6"
chrono = "0.4.41"
serde = "1.0.219"
tokio = "1.45.1"

[dependencies]
alegria_core.workspace = true
alegria_utils.workspace = true

iced.workspace = true
iced.features = ["tokio", "wgpu", "tiny-skia", "advanced", "image", "debug"]

anywho.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true

i18n-embed-fl = "0.9.4"         # needed for fl support
rust-embed = "8.7.2"            # needed for fl support
unicode-segmentation = "1.12.0" # needed for custom text-input

[dependencies.i18n-embed]
version = "0.15.4"
features = ["fluent-system", "desktop-requester"]

[lints.clippy]
single-component-path-imports = "allow"
too-many-arguments = "allow"
large-enum-variant = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependenc.
# Slows compile times, marginal improvements.
lto = "thin"
